Fixed an issue with threadchecker plugin using its own output directory in its classpath and trying to use its plugin during compilation (due to inherited configuration).  Project currently builds under JDK 11.